fix(website): clearer style for project cards
add a border to project cards in projects-list (therefore allowing to
use small gaps), and fix box-shadow with the dark theme

--- a/website/public/styles/dark-theme.css
+++ b/website/public/styles/dark-theme.css
@@ -23,5 +23,6 @@ html {
   --stronger-bg-color: var(--neutral-color-300);
   --daucus-menu-active-color: var(--primary-color);
   --light-item-inversion: 1;
+  --negative-rgb: 255, 255, 255;
   font-size: 16px;
 }
